# SCSCore1

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Core/: appbus.cpp  appbus.h  configmanager.cpp  configmanager.h  core.cpp  core.h  coredispatcher.cpp  coredispatcher.h  coremanager.cpp  coremanager.h  imodule.h
Modules/ExampleModule/: examplemodule.cpp  examplemodule.h
tests/: testmodule.cpp  testmodule.h
